<resources>
    <string name="app_name">String</string>
    <string name="untitled"></string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="drawer_open"> Drawer Open</string>
    <string name="drawer_close"> Drawer Close</string> <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="register_text">Register Here</string>
    <string name="login_label">Log In</string>
    <string name="nextBtn_label">Next</string>
    <string name="register_label">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_feed">Feed</string>
    <string name="title_saved">Saved</string>
    <string name="title_search">Search</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">User Profile</string>

    <!--<string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">Register</string>
    <string name="Topic">Topic:</string>
    <string name="camera_btn_txt">Take Photo</string>
-->

    <!-- strings related to clarifai -->

    <string name="clarifai_api_key">e0097554ff594e87a981a7db0c7d9d9a</string>
    <string name="error_external_storage_permission_not_granted">You must accept this permission so we can upload your images!</string>
    <string name="error_while_contacting_api">Error while contacting Clarifai API</string>
    <string name="no_results_from_api">API did not return any results</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome_page">Welcome</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search2">SearchActivity2</string>

</resources>


